--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -67,7 +67,7 @@
 
             <Button
                 android:id="@+id/btnCamera"
-                android:layout_width="match_parent"
+                android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -80,7 +80,7 @@
 
             <Button
                 android:id="@+id/btnCooking"
-                android:layout_width="match_parent"
+                android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -90,6 +90,21 @@
                 android:textColor="@android:color/white"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="0dp" />
+
+            <com.facebook.share.widget.ShareButton
+                android:id="@+id/fb_share_button"
+                android:layout_width="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1" />
+
+            <com.facebook.share.widget.ShareButton
+                android:id="@+id/fb_share_button2"
+                android:layout_width="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -124,6 +139,13 @@
             app:menu="@menu/menu"
 
             />
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp" />
 
     </LinearLayout>
 
