--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorToolbar">#7b7d32</color>
+    <color name="colorToolbar">#ed7340</color>
     <color name="colorNavibar">#c3c63d</color>
     <color name="colorBG">#feffcf</color>
     <color name="colorNewBG">#ffe465</color>
