--- a/app/src/main/res/layout/activity_facebook_info.xml
+++ b/app/src/main/res/layout/activity_facebook_info.xml
@@ -91,13 +91,12 @@
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="0dp" />
 
-            <Button
+            <com.facebook.share.widget.ShareButton
                 android:id="@+id/fb_share_button"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:text="FacebookInfo"/>
+                android:layout_weight="1" />
 
             <com.facebook.share.widget.ShareButton
                 android:id="@+id/fb_share_button2"
