--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,6 +152,7 @@
             android:layout_weight="1.5" />
 
         <TextView
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoText="true"
@@ -164,14 +165,24 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5" />
 
-        <Button
-            android:id="@+id/loginfacebook"
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
             style="@style/com_facebook_button_share"
             android:layout_width="230dp"
-            android:layout_height="40dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:text="Log In with Facebook"
-            android:textSize="16dp"
+            app:com_facebook_login_text="Log In With Facebook"
+            app:com_facebook_logout_text="Log out" />
+
+        <Button
+            android:id="@+id/tryna"
+            style="?android:attr/textAppearanceButton"
+            android:layout_height="60dp"
+            android:layout_width="230dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0"
+            android:text="@string/action_sign_in"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <Space
