--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -6,93 +6,76 @@
     android:background="#FFFFFF"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingLeft="10dp">
+    android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <RelativeLayout
         android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/egg" />
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/foodPic"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentTop="false"
+            android:background="@drawable/egg" />
+
+        <ImageView
+            android:id="@+id/star"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:elevation="1dp"
+            app:srcCompat="@drawable/star40" />
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_alignParentTop="true"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:paddingLeft="10dp">
 
         <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
+            android:id="@+id/foodName"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
             android:text="Text"
             android:textColor="#000000"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:maxLines="2"
+            android:ellipsize="end"/>
 
         <TextView
-            android:id="@+id/textViewsing2"
-            android:layout_width="match_parent"
+            android:id="@+id/calorie"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
             android:text="TextView"
             android:textColor="#000000"
             android:textSize="14sp" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="60dp"
+    <ImageView
+        android:id="@+id/carrot"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/carrot_grey" />
+
+    <TextView
+        android:id="@+id/textLike"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            app:srcCompat="@drawable/rank1" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            app:srcCompat="@drawable/like" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textRank"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Text"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textLike"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Text"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-    </LinearLayout>
-
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:text="Text"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
 </LinearLayout>
