--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -165,25 +165,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5" />
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button"
+        <Button
+            android:id="@+id/loginfacebook"
             style="@style/com_facebook_button_share"
             android:layout_width="230dp"
-            android:layout_height="80dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            app:com_facebook_login_text="Log In With Facebook"
-            app:com_facebook_logout_text="Log out" />
-
-        <Button
-            android:id="@+id/tryna"
-            style="?android:attr/textAppearanceButton"
-            android:layout_height="60dp"
-            android:layout_width="230dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0"
-            android:text="@string/action_sign_in"
-            android:textSize="18sp"
+            android:text="Log In with Facebook"
+            android:textSize="16dp"
             android:textStyle="bold" />
+
 
         <Space
             android:layout_width="match_parent"
