--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.cookzyme.cookzyme.LoginActivity">
+    tools:context="com.example.cookzyme.cookzyme.LoginActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <!-- Login progress -->
 
