--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/navigation_Refrigerator"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/refrigerator"
         android:title="Refrigerator" />
 
     <item
         android:id="@+id/navigation_Profile"
-        android:icon="@drawable/user"
+        android:icon="@drawable/avatar"
         android:title="Profile" />
 
     <item
