--- a/app/src/main/res/layout/activity_facebook_info.xml
+++ b/app/src/main/res/layout/activity_facebook_info.xml
@@ -66,7 +66,7 @@
             tools:layout_editor_absoluteX="8dp">
 
             <Button
-                android:id="@+id/btnCamera"
+                android:id="@+id/addinfo"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -79,27 +79,27 @@
                 tools:layout_editor_absoluteY="0dp" />
 
             <Button
-                android:id="@+id/btnCooking"
+                android:id="@+id/camera"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 android:background="@android:color/holo_blue_dark"
-                android:text="check status"
+                android:text="camera"
                 android:textColor="@android:color/white"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="0dp" />
 
             <Button
-                android:id="@+id/friendlist"
+                android:id="@+id/post"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 android:background="@android:color/holo_orange_light"
-                android:text="friendlist"
+                android:text="post"
                 android:textColor="@android:color/white"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="0dp" />
