--- a/app/src/main/res/layout/singlerow_feed.xml
+++ b/app/src/main/res/layout/singlerow_feed.xml
@@ -24,6 +24,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="0.3"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
 
             <TextView
