--- a/app/src/main/res/layout/home_section_fragment.xml
+++ b/app/src/main/res/layout/home_section_fragment.xml
@@ -36,11 +36,13 @@
             app:tabTextColor="@android:color/white">
 
             <android.support.design.widget.TabItem
+                android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tab1" />
 
             <android.support.design.widget.TabItem
+                android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tab2" />
