--- a/app/src/main/res/layout/refrigerator_section_fragment.xml
+++ b/app/src/main/res/layout/refrigerator_section_fragment.xml
@@ -33,10 +33,11 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pagerRefrigerator"
+        <ListView
+            android:id="@+id/refrigeratorListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
@@ -55,12 +56,12 @@
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton3"
+        android:id="@+id/cooking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="80dp"
         android:layout_marginBottom="80dp"
+        android:layout_marginRight="16dp"
         android:background="@android:color/black"
         android:clickable="true"
         app:backgroundTint="@android:color/white"
