--- a/app/src/main/res/layout/home_section_fragment.xml
+++ b/app/src/main/res/layout/home_section_fragment.xml
@@ -39,13 +39,13 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tab1" />
+                android:text="Home" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tab2" />
+                android:text="Feed" />
         </android.support.design.widget.TabLayout>
 
     </android.support.design.widget.AppBarLayout>
