--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorBG">#feffcf</color>
     <color name="colorNewBG">#ffe465</color>
     <color name="colorButton">#5b6f98</color>
+    <color name="floatingButtonAdd">#324a5e</color>
 
 
 </resources>
