--- a/app/src/main/res/layout/activity_view_recipe_home.xml
+++ b/app/src/main/res/layout/activity_view_recipe_home.xml
@@ -1,270 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBG"
-    tools:context="com.example.cookzyme.cookzyme.viewRecipeHome">
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/colorToolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/app_name"
-            android:textColor="@android:color/background_light"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-    </android.support.v7.widget.Toolbar>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_margin="10dp"
+              android:background="#FFFFFF"
+              android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="30dp"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:paddingTop="5dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:scaleX="1"
-            android:scaleY="1"
-            app:srcCompat="@drawable/back"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:id="@+id/gap"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.1"
-            android:orientation="vertical"></LinearLayout>
-
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            app:menu="@menu/menu"
-            android:background="@color/colorNavibar"
-            itemBackground="@android:color/transparent"
-            itemIconTint="@drawable/selector_navibar"
-            itemTextColor="@drawable/selector_navibar"
-            />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/singlerow"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:gravity="center_vertical"
+        android:background="#FFFFFF"
         android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
-        tools:layout_editor_absoluteX="8dp">
+        >
 
-        <ImageView
-            android:id="@+id/imageView1"
+        <RelativeLayout
             android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/egg" />
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/foodPic"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentRight="false"
+                android:layout_alignParentTop="false"
+                android:background="@drawable/egg"/>
+
+            <ImageView
+                android:id="@+id/star"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:elevation="1dp"
+                app:srcCompat="@drawable/star40"/>
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingLeft="10dp">
 
             <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
+                android:id="@+id/foodName"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="Text"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
+                android:id="@+id/calorie"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
                 android:text="TextView"
                 android:textColor="#000000"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="60dp"
+        <ImageView
+            android:id="@+id/carrot"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/carrot_grey"/>
+
+        <TextView
+            android:id="@+id/textLike"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:scaleX="0.7"
-                android:scaleY="0.7"
-                app:srcCompat="@drawable/rank1" />
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:scaleX="0.7"
-                android:scaleY="0.7"
-                app:srcCompat="@drawable/like" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textRank"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Text"
-                android:textColor="#000000"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textLike"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="Text"
-                android:textColor="#000000"
-                android:textSize="20sp" />
-        </LinearLayout>
-
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="Text"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ingre"
+    <TextView
+        android:id="@+id/Recipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Recipe"
+        android:textColor="@color/colorToolbar"
+        android:textSize="22sp"
+        android:textStyle="bold"/>
+
+    <ListView
+        android:id="@+id/listviewFeed"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/singlerow"
-        tools:layout_editor_absoluteX="8dp">
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ingredients"
-            android:textColor="#ef8701"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textIngre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="bra"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Directions"
-            android:textColor="#ef8701"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/textDirect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="bra"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:visibility="invisible" />
-
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/facebook"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="right"
-        app:srcCompat="@drawable/share"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.94"
-        app:layout_constraintVertical_bias="0.35000002" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/teach"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:scaleX="2"
-        android:scaleY="2"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/teach_icon"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/ingredient"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:elevation="1dp"
+        android:text="bla"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/direction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Direction"
+        android:textColor="@color/colorToolbar"
+        android:textSize="22sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/directions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:elevation="1dp"
+        android:text="Directions"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"/>
+
+</LinearLayout>
