--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:id="@+id/frame">
 
+    <ProgressBar
+        android:id="@+id/progressBarProfile"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp" />
+
     <RelativeLayout
         android:id="@+id/grid"
         android:layout_width="match_parent"
