--- a/app/src/main/res/layout/singlerow_refrigerator.xml
+++ b/app/src/main/res/layout/singlerow_refrigerator.xml
@@ -5,8 +5,15 @@
     android:layout_height="100dp"
     android:background="#FFFFFF"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="10dp">
+    android:orientation="horizontal">
+
+    <ImageButton
+        android:id="@+id/deleteIngredient"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
+        android:background="@android:drawable/presence_busy"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/foodPic"
@@ -14,6 +21,7 @@
         android:layout_height="80dp"
         android:layout_alignParentRight="false"
         android:layout_alignParentTop="false"
+        android:layout_marginLeft="10dp"
         android:background="@drawable/egg" />
 
     <TextView
@@ -21,25 +29,25 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:ellipsize="end"
         android:gravity="center_vertical"
+        android:maxLines="2"
         android:paddingLeft="10dp"
         android:text="ingredientNameNAJAAAAAAAAAAA"
         android:textColor="#000000"
-        android:textSize="20sp"
-        android:maxLines="2"
-        android:ellipsize="end"/>
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/sign"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:id="@+id/num"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
         android:gravity="right|center_vertical"
         android:text="num"
         android:textColor="@android:color/black"
@@ -47,7 +55,7 @@
 
     <TextView
         android:id="@+id/pronoun"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="10dp"
