--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="colorButton">#5b6f98</color>
     <color name="floatingButtonAdd">#324a5e</color>
     <color name="lightGray">#E1E1E1</color>
-    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhite">#ffffff</color>
 
 
 </resources>
